# tg-crypto-bot

./: .env.example  Cargo.toml  LICENSE  README.md  SECURITY.md  go.work  go.work.sum
.github/workflows/: ci.yml
api/: go.mod  go.sum
api/cmd/: main.go
api/config/: api.yaml.example
api/internal/auth/: auth.go
api/internal/config/: config.go
api/internal/httpapi/: server.go
api/internal/jobs/: dispatcher.go
api/internal/middleware/: ratelimit.go
api/internal/ta/: client.go
api/internal/telemetry/: telemetry.go
bot/: go.mod  go.sum
bot/cmd/: main.go
bot/config/: bot.yaml.example
bot/internal/config/: config.go
bot/internal/handlers/: handlers.go
bot/internal/telemetry/: telemetry.go
connectors/cex/: connector.go  go.mod  go.sum
connectors/evm/: Cargo.toml
connectors/evm/src/: lib.rs
connectors/solana/: Cargo.toml
connectors/solana/src/: lib.rs
data/: go.mod  go.sum
data/internal/store/: store.go
data/migrations/: 0001_init.sql  0002_ta_candles.sql
docs/: architecture.md  configuration.md  runbook.md  threat-model.md
exec/: Cargo.toml
exec/config/: default.yaml
exec/src/: main.rs  ta_client.rs
exec/src/config/: mod.rs
exec/src/filters/: mod.rs
exec/src/job/: mod.rs
ops/: Dockerfile.api  Dockerfile.bot  Dockerfile.exec  Dockerfile.ta  Makefile  docker-compose.yml
risk/: go.mod
risk/internal/engine/: engine.go  engine_test.go
risk/internal/models/: models.go
scripts/: bootstrap.sh  build-all.sh  integration.sh
signer/: Cargo.toml
signer/src/: lib.rs
ta-service/: go.mod  go.sum
ta-service/cmd/: main.go
ta-service/cmd/backtest/: main.go
ta-service/rustlib/: Cargo.toml
ta-service/rustlib/src/: lib.rs
(+14 files in other folders)
