[package]
name = "exec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
config = "0.13"
ethers = { version = "2.0", features = ["ws", "abigen"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.10"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde_yaml = "0.9"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hyper = { version = "0.14", features = ["server", "http1", "tcp", "runtime"] }
