[package]
name = "signer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ethers = { version = "2.0", features = ["signer"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
hex = "0.4"
