[package]
name = "ta_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ta = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
ethers = { version = "2", features = ["ws", "abigen"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
